# -*- coding: utf-8 -*-

class CLeiFeng(object):
	def Sweep(self):
		print "扫地"

	def Wash(self):
		print "洗衣服"

	def BuyRice(self):
		print "买米"


class CUndergraduate(CLeiFeng):
	pass


class CVolunteer(CLeiFeng):
	pass